[gd_scene load_steps=13 format=3 uid="uid://brn6oxtbcql0b"]

[ext_resource type="Script" uid="uid://bk3k6exvhj5rb" path="res://audio.gd" id="1_564a7"]
[ext_resource type="AudioStream" uid="uid://cac11vxsp8a1m" path="res://sound_effects/Super Street Fighter II OST Guile Theme(MP3_320K).mp3" id="1_qc0l7"]
[ext_resource type="AudioStream" uid="uid://55xtv2kfeff7" path="res://sound_effects/sfx/attack_attack.ogg" id="2_cqcg1"]
[ext_resource type="AudioStream" uid="uid://dpum8k88ra2vf" path="res://sound_effects/sfx/defance_defance.ogg" id="3_564a7"]
[ext_resource type="AudioStream" uid="uid://808vpcte54x6" path="res://sound_effects/sfx/recharge_recharge.ogg" id="4_qf6oy"]
[ext_resource type="AudioStream" uid="uid://tkcqbo68tvhh" path="res://sound_effects/sfx/attack_defance.ogg" id="5_tor12"]
[ext_resource type="AudioStream" uid="uid://ccilt4q8xnlno" path="res://sound_effects/sfx/attack_recharge.ogg" id="6_fajnq"]
[ext_resource type="AudioStream" uid="uid://cgesei2y3kyn6" path="res://sound_effects/sfx/dead.mp3" id="7_f6syg"]
[ext_resource type="AudioStream" uid="uid://cuis4lxgqobt8" path="res://sound_effects/sfx/down.mp3" id="8_enkql"]
[ext_resource type="AudioStream" uid="uid://bijhouil4a0l6" path="res://sound_effects/sfx/walk.ogg" id="9_il71m"]
[ext_resource type="AudioStream" uid="uid://c30xqmlabigub" path="res://sound_effects/sfx/game_mood.ogg" id="10_iet0q"]
[ext_resource type="AudioStream" uid="uid://7e6t8crixa0y" path="res://sound_effects/sfx/loading.mp3" id="11_v84do"]

[node name="audio" type="Node2D"]
script = ExtResource("1_564a7")

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_qc0l7")

[node name="music2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_qc0l7")
volume_db = -12.0

[node name="attack_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_cqcg1")
volume_db = 12.0

[node name="defance_defance" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_564a7")
volume_db = 12.0

[node name="recharge_recharge" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qf6oy")
volume_db = 24.0

[node name="attack_defance" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tor12")
volume_db = 12.0

[node name="attack_recharge" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_fajnq")
volume_db = 12.0

[node name="game_over" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_f6syg")

[node name="down" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_enkql")
volume_db = 24.0

[node name="walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_il71m")
volume_db = 10.0

[node name="game_mood" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_iet0q")

[node name="loading" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_v84do")
